Run make generate
